--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 
 h2 {
-    font-size: 3.5rem;
+    font-size: 3rem;
     
 
 }
@@ -26,13 +26,28 @@ header nav {
 
 header nav ul {
     display: flex;
-    padding: 0 0 0 10vw;
+    padding: 0 0 0 42vw;
 }
 
 header nav h1 {
     padding: 0 10vw 0 0;font-weight: bold;
 }
 
+header nav ul li .linkA{
+    font-size: 1.2vw;
+}
+
+header nav ul li a {
+    color: #000;
+    font-size: 1.2vw;
+    text-decoration: none;
+}
+
+header nav ul li .linkB {
+    font-size: 1.2vw;
+    border-radius: 10px;
+    
+}
 
 header nav ul li {
     padding: 0 2vw 0 0;
@@ -44,21 +59,23 @@ header nav ul li:last-child {
 
 .s1 {
     display: flex;
-    padding: 0 10vw 6vw 10vw;
+    padding: 0 5vw 6vw 5vw;
     background-color: #E8F4FA;
+}
+
+.s1 .title {
+    padding: 20vw 0 0 0;
 }
 
 .s1 p {
     line-height: 2vw;
     margin: 0 5.5vw 0 0;
-    font-size: 1.5rem;
+    font-size: 1.2vw;
     padding: 2vw 0 5vw 0;
     color: #5C5C5C;
 }
 
-.s1  img{
-    padding: 3vw 0 0 0;
-}
+
 
 .s2 {
     padding: 0 10vw 0 10vw;
@@ -86,9 +103,28 @@ header nav ul li:last-child {
 }
 
 .s4 {
-    padding: 0 10vw 0 10vw;
+    padding: 10vw 12vw 10vw 12vw;
     text-align: center;
     background-color: #E8F4FA;
+}
+
+.s4 h2{
+font-size: 2rem;
+padding: 0 0 3vw 0;
+}
+.email{
+    padding: 1.5vw 11vw 1.5vw 11vw;
+    border-radius: 17px;
+    border: none;
+}
+.enviar {
+    padding: 1.5vw 5vw 1.5vw 5vw;
+    border-radius: 17px;
+    border: solid;
+    background-color: #000;
+    margin: 0 0 0 1vw;
+    color: #FFFFFF;
+    font-size: 1.2vw;
 }
 
 
@@ -109,6 +145,8 @@ footer {
 .linkA {
     color: #1090CB;
     text-decoration: none;
+    font-size: 1.5rem;
+    margin: 0 0 0 2vw;
 }
 
 .linkB {
@@ -117,7 +155,7 @@ footer {
     text-decoration: none;
     border-radius: 17px;
     padding: 1vw 3vw 1vw 3vw;
-    font-size: 1.5rem;
+    font-size: 1.2vw;
 }
 
 .linkC {
@@ -127,7 +165,7 @@ footer {
     border: #1090CB 1px solid;
     padding: 1vw 3vw 1vw 3vw;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.2vw;
     margin: 0 0 0 1.5vw;
 }
 
